--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,107 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Antique Collector</string>
+
+    <!-- Onboarding Screen -->
+    <string name="skip">Skip</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+    <string name="get_started">Get Started</string>
+
+    <!-- Onboarding Page 1 -->
+    <string name="onboarding_title_1">Organize Your Antique Collection</string>
+    <string name="onboarding_description_1">Keep all your treasured antiques organized in one place, with detailed information and high-quality images.</string>
+
+    <!-- Onboarding Page 2 -->
+    <string name="onboarding_title_2">Track Value and Condition</string>
+    <string name="onboarding_description_2">Monitor the value and condition of your antiques over time, with comprehensive tracking and documentation.</string>
+
+    <!-- Onboarding Page 3 -->
+    <string name="onboarding_title_3">Discover Historical Context</string>
+    <string name="onboarding_description_3">Connect with museum databases to learn more about the historical significance of your antique items.</string>
+
+
+    <!-- Dashboard Screen -->
+    <string name="dashboard_title">My Collection</string>
+    <string name="total_items">Total Items</string>
+    <string name="collection_value">Collection Value</string>
+    <string name="categories">Categories</string>
+    <string name="recent_additions">Recent Additions</string>
+    <string name="add_item">Add Item</string>
+    <string name="search_collection">Search Collection</string>
+
+    <!-- Item Detail Screen -->
+    <string name="item_details">Item Details</string>
+    <string name="edit_item">Edit Item</string>
+    <string name="delete_item">Delete Item</string>
+    <string name="acquisition_date">Acquired: %1$s</string>
+    <string name="current_value">Current Value: %1$s</string>
+    <string name="condition">Condition</string>
+    <string name="about_this_item">About This Item</string>
+    <string name="historical_context">Historical Context</string>
+    <string name="item_notes">Notes</string>
+    <string name="item_materials">Materials</string>
+    <string name="item_dimensions">Dimensions</string>
+    <string name="item_origin">Origin</string>
+    <string name="item_period">Period</string>
+
+    <!-- Museum Screen -->
+    <string name="museum_information">Museum Information</string>
+    <string name="search_museum">Search Museum</string>
+    <string name="similar_artifacts">Similar Artifacts</string>
+    <string name="view_in_museum">View in Museum</string>
+
+    <!-- Add/Edit Screen -->
+    <string name="add_new_item">Add New Item</string>
+    <string name="edit_item_details">Edit Item Details</string>
+    <string name="item_name">Item Name</string>
+    <string name="category">Category</string>
+    <string name="select_category">Select Category</string>
+    <string name="add_images">Add Images</string>
+    <string name="save_item">Save Item</string>
+    <string name="cancel">Cancel</string>
+    <string name="enter_item_name">Enter item name</string>
+    <string name="enter_value">Enter value</string>
+    <string name="enter_description">Enter description</string>
+    <string name="enter_location">Enter location</string>
+
+    <!-- Settings Screen -->
+    <string name="settings">Settings</string>
+    <string name="notifications">Notifications</string>
+    <string name="push_notifications">Push Notifications</string>
+    <string name="email_updates">Email Updates</string>
+    <string name="sound_alerts">Sound Alerts</string>
+    <string name="currency">Currency</string>
+    <string name="location">Location</string>
+    <string name="appearance">Appearance</string>
+    <string name="dark_mode">Dark Mode</string>
+    <string name="light_mode">Light Mode</string>
+    <string name="backup_sync">Backup &amp; Sync</string>
+    <string name="auto_backup">Auto Backup</string>
+
+    <!-- Error Messages -->
+    <string name="error_loading_data">Error loading data</string>
+    <string name="error_saving_item">Error saving item</string>
+    <string name="error_network">Network error. Please check your connection</string>
+    <string name="try_again">Try Again</string>
+
+    <!-- Common -->
+    <string name="back">Back</string>
+    <string name="explore">Explore</string>
+    <string name="loading">Loading…</string>
+
+    <!-- Notification Channels -->
+    <string name="notification_channel_collection_review">Collection Review</string>
+    <string name="notification_channel_collection_review_description">Reminders to review your antique collection</string>
+    <string name="notification_channel_museum_events">Museum Events</string>
+    <string name="notification_channel_museum_events_description">Notifications about relevant museum exhibitions and events</string>
+
+    <!-- Notification Titles -->
+    <string name="notification_title_collection_review">Time to review your collection</string>
+    <string name="notification_title_museum_event">New museum exhibition</string>
+
+    <!-- Notification Content -->
+    <string name="notification_content_collection_review">It\'s time to review and update your antique collection.</string>
+    <string name="notification_content_museum_event">There\'s a new exhibition that might interest you based on your collection.</string>
+
 </resources>
